Fix send button on small size screen

--- a/front/src/app/pages/post/post.component.scss
+++ b/front/src/app/pages/post/post.component.scss
@@ -19,11 +19,12 @@
 }
 
 .comment-section {
-    // padding: 30px;
+    padding: 30px;
 }
 
 .relative-send-button {
     position: relative;
+    right: 72px;
 }
 
 .small-form {
